# volvo-dmc

./: .deployment  .dockerignore  .gitignore  AZURE_DEPLOYMENT.md  AZURE_DEPLOYMENT_CONFIG.md  AZURE_DEPLOYMENT_GUIDE.md  AZURE_DOCKER_DEPLOYMENT.md  AZURE_PERMISSION_REQUEST.md  CHANGELOG.md  CLEANUP-SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT-STATUS.md  DEPLOYMENT.md  DEPLOYMENT_ALTERNATIVES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DEPLOY_VOLVO_NOW.sh  DOCKER.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.minimal  FASTEST_DEPLOY.md  FIX_AZURE_DEPLOYMENT.md  GITHUB_AZURE_DEPLOYMENT.md  GITHUB_DEPLOYMENT_SUCCESS.md  GITHUB_SECRETS_SETUP.md  LICENSE  LIVE_APP_READY.md  MANUAL_AZURE_DEPLOYMENT.md  PORTAL_DEPLOY.md  PRODUCTION_READY.md  Procfile  QUICK_DEPLOY_GUIDE.md  QUICK_REGISTRY_TEST.sh  README.md  RENDER_DEPLOYMENT.md  SECURITY.md  SERVICE_PRINCIPAL_DEPLOY.md  STATIC_WEB_APP_GUIDE.md  app.py  (+35 more)
.devcontainer/: devcontainer.json
.github/workflows/: azure-app-service-deploy.yml  azure-deploy.yml  azure-static-web-apps-wonderful-pebble-077934d03.yml  azure-webapp-deploy.yml  build-and-deploy.yml  deploy-online.yml  deploy.yml  docker-deploy.yml  github-pages.yml  live-deployment.yml  main_dmc-web-app.yml  main_dmc.yml  main_vdmc.yml  main_vmdc.yml  main_volvo-mdc.yml  multi-cloud-deploy.yml  (+3 more)
api/: requirements.txt
backend/: .gitignore  __init__.py  app.py  database.json  dmc_detection_hybrid.py  generate_qr.py  main.py  read_dmc.py
docs/: index.html
frontend/: index.html  script.js  style.css
infra/: app-service.bicep  main.bicep  main.parameters.json
(+8 files in other folders)
