# Deployment configuration for Azure App Service
[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "volvo-dmc-generator"
version = "1.0.0"
description = "VOLVO DMC Generator - Datamatrix Creator"
authors = [
    {name = "Nawoar Ekkou", email = "nawoar.ekkou@volvocars.com"}
]

[tool.azure]
webapp_name = "volvo-dmc-generator"
python_version = "3.11"
startup_command = "gunicorn --bind 0.0.0.0:8000 --workers 4 backend.app:app"
